# mecha-custom-components

./: .gitignore  CHANGELOG.md  LISCENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/basic_component/: beet.yaml
examples/basic_component/plugins/: component.py
examples/basic_component/src/data/test/modules/: entry.bolt
examples/basic_component_with_properties/plugins/: component.py
examples/basic_component_with_properties/src/data/test/modules/: entry.bolt
examples/click_component/: beet.yaml
examples/click_component/plugins/: component.py
examples/click_component/src/data/test/modules/: entry.bolt
mecha_custom_components/: __init__.py
tests/: test_components.py
tests/snapshots/: components__build_basic_component__0.pack.md  components__build_basic_component_with_properties__0.pack.md  components__build_click_component__0.pack.md
